# TFBS

./: .gitignore  LICENSE  README.md  attributes.ipynb  attributes_functions.py  attributes_motif.ipynb  attributes_ood.ipynb  attributions.py  berttest.py  data.py  deepbind.py  dnabert.py  dnabertcap.py  evaluate.py  main.py  model.py  moe.py  new.py  nielseni6.code-workspace  pyproject.toml  refac.py  refactor.py  requirements.txt  results.txt  test.py  transformer.db  transformer.py  transformer_cnn.py  transformer_dnabert.py  utils.py
data/: README.md
docs/: RESULTS_HETMOE.md  Response_to_Reviewer2.docx  Response_to_Reviewer2.md  reproduce.md  results_layout.md
experiments/ablation/: __init__.py  ablation.py
experiments/analysis/: data_quality.py  family_similarity.py  make_figure1.py  make_figures.py  make_hetmoe_report.py  make_paper_figures.py  stats.py  validate_paper.py
experiments/attribution/: attributes_functions.py  make_attribution_figures.py  shiftsmooth_eval.py
experiments/baselines/: baselines.py
experiments/data/: fetch_encode.py
experiments/hetmoe/: aggregate_seeds.py  cache_embeddings.py  decision_gate.py  single_config.py  sweep.py
experiments/train/: evaluate.py  main.py
models/experts/: ARID3A.pth  (+2 more)
old/: olddata.py  precomp.py  transformer_cnn.py
results/: bootstrap_paired.csv  evaluation_results.json  evaluation_summary.csv
slurm/: phase0.sbatch  phaseA_cache.sbatch  phaseBC.sbatch
tfbs/: __init__.py  baselines.py  constants.py  data.py  evaluate_hetmoe.py  experts.py  figstyle.py  gate.py  metrics.py  models.py  utils.py
(+219 files in other folders)
